src/objects/Purchase_Order__c.object
<CustomObject>
    <description>Object used to track PO&apos;s so distributors can fill out the following forms: US Order Form, EDI Form, Canada_LATAM Form, Changes Form</description>
    <fields>
        <fullName>Barrel_Number__c</fullName>
        <label>Barrel Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Barrel_Number_txt__c</fullName>
        <label>Barrel Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barrel_Order_Number__c</fullName>
        <label>Barrel Order Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barrel_Order__c</fullName>
        <label>Barrel Order</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Code__c</fullName>
        <label>Budget Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Related Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Direct_Import__c</fullName>
        <label>Direct Import?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <label>Failed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inco_Terms_Approved__c</fullName>
        <label>Inco Terms Approved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inco_Terms_Changed__c</fullName>
        <label>Inco Terms Changed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Issue__c</fullName>
        <label>Other Issue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number_of_Pooled_Order__c</fullName>
        <label>PO Number of Pooled Order</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pooled__c</fullName>
        <label>Pooled?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderIssues__c</fullName>
        <label>Purchase Order Issues</label>
        <picklist>
            <picklistValues>
                <fullName>No Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overweight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoterms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Weight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SAP_No_Timestamp__c</fullName>
        <label>SAP Number Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_No_Updated_Within_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be updated through workflow.</description>
        <label>SAP No Updated Within SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Number__c</fullName>
        <label>SAP Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <type>TextArea</type>
    </fields>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Purchase Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Incoterms_Changed_Requirement</fullName>
        <active>true</active>
        <description>If Incoterms were changed, Reason and Budget Code are required.</description>
        <errorConditionFormula>AND (
 ISPICKVAL( Inco_Terms_Changed__c , &quot;Yes&quot;),
 OR(
 ISBLANK( Reason__c ),
 ISBLANK( Budget_Code__c ),
 ISPICKVAL( Inco_Terms_Approved__c , &quot;&quot;) 
)
)</errorConditionFormula>
        <errorMessage>Incoterms Approved, Reason and Budget Code fields are Required because Incoterms were changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Issue_Required_on_PO_Issue</fullName>
        <active>true</active>
        <description>If Purchase Order Issue is &quot;Other&quot;, this requires &quot;Other Issue&quot; to be populated.</description>
        <errorConditionFormula>AND ( 
INCLUDES(  PurchaseOrderIssues__c , &quot;Other&quot;), 
ISBLANK(  Other_Issue__c  ) 
)</errorConditionFormula>
        <errorDisplayField>Other_Issue__c</errorDisplayField>
        <errorMessage>This field is required.</errorMessage>
    </validationRules>
</CustomObject>